fix z-index issue with global loader

--- a/src/pages/common/components/CommonContent/CommonContent.module.scss
+++ b/src/pages/common/components/CommonContent/CommonContent.module.scss
@@ -1,6 +1,10 @@
 @import "../../../../constants";
 @import "../../../../styles/sizes";
 
+.globalLoader {
+  z-index: 10;
+}
+
 .container {
   --main-content-mw: 62%;
   --bottom-tabs-height: 4rem;
